[tool.poetry]
name = "test_totp"
version = "0.1.0"
description = ""
authors = ["infinith4 <infinith4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyotp = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
